tests/lowering/sequence-literals-unsupported.stderr
error: attribute `List` not supported yet
 >>> ${DIRECTORY}/lowering/sequence-literals-unsupported.lushui:3:19
  |
3 | construct: List = @List [1 3 100 @Nat32 0]
  |                   ^^^^^ 
  |

error: sequence literals not supported yet
 >>> ${DIRECTORY}/lowering/sequence-literals-unsupported.lushui:3:25
  |
3 | construct: List = @List [1 3 100 @Nat32 0]
  |                         ^^^^^^^^^^^^^^^^^^ 
  |

error: sequence literal patterns not supported yet
 >>> ${DIRECTORY}/lowering/sequence-literals-unsupported.lushui:8:9
  |
8 |         [\x \y @Text "X"] => always
  |         ^^^^^^^^^^^^^^^^^ 
  |

error: aborting due to 3 previous errors

